Version 1.3.2

- ISSUE #5: Correction of string library import

Version 1.3.1

- changed pins on the examples to match schematics on project site.

Version 1.3.0

- added support for String Object;
- added support for removing leading zeros in displaying numbers.

Version 1.2.0

- added support for writing text.

Version 1.1.0

- restructuring and added 2 proper examples, available in the arduino ide.

Version 1.0.0

- initial release.