@@ -1,3 +1,7 @@
+
+- ISSUE #6: Support for specifying dots on setDisplayToString
+  WARNING: setDisplayToString methods have changed prototype and are incompatible with code compiled for 1.3.x (if you specified a custom font)
+
 Version 1.3.2
 
 - ISSUE #5: Correction of string library import
